--- a/index.html
+++ b/index.html
@@ -2,91 +2,77 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>大吉おみくじ（1920x1080）</title>
+  <title>大吉おみくじ（1920x1080・青い枠）</title>
   <!-- Google Fonts: Sawarabi Mincho（和風っぽさ） -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Mincho:wght@700&display=swap" rel="stylesheet">
 
   <style>
-    /* 全画面＆余白0 */
+    /* 全画面余白を無くす */
     html, body {
       margin: 0;
       padding: 0;
       width: 100%;
       height: 100%;
-      background: #fdfdf0; /* 薄い和風背景色 */
+      background: #fdfdf0; /* 薄い和風背景 */
       font-family: 'Sawarabi Mincho', sans-serif;
       color: #3b1a1a;
       text-align: center;
     }
-
-    /* ページタイトル */
     h1 {
       margin: 20px 0;
       font-size: 2rem;
     }
 
-    /* 表示切り替え用（最初・振ってる最中・結果） */
+    /* 画面遷移用のセクション表示・非表示 */
     #initial-section, #omikuji-section, #result-section {
       display: none;
     }
-    /* 読み込み時は最初のセクションのみ表示 */
+    /* ロード時は最初のセクションだけ表示 */
     #initial-section {
       display: block;
     }
 
-    /* 1920×1080 のキャプチャ領域 */
+    /* キャプチャ領域: 1920×1080 + 青い枠(紺色) */
     #capture-area {
+      width: 1920px;
+      height: 1080px;
+      margin: 0 auto;            /* 画面中央に配置 */
       position: relative;
-      width: 1920px;
-      height: 1080px;
-      margin: 0 auto;
-      background: #fdfdf0; 
-      overflow: hidden; 
-    }
-
-    /* おみくじ全体を画面いっぱいに配置 */
-    .omikuji-wrapper {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 1920px;
-      height: 1080px;
-      display: flex;
+      background: #fff;          /* 中身は白 */
+      border: 20px solid #153f74;/* 紺色の太枠 */
+      box-sizing: border-box;    
+      display: flex;             /* 縦並びレイアウト */
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      background: #fff;
-      border: 10px solid #153f74; /* 紺色の枠 */
-      box-sizing: border-box;
     }
 
-    /* 大きな「大吉」文字 */
-    .omikuji-title {
-      color: #ef5411; /* 橙色 */
-      font-size: 8rem;
-      margin-top: 20px;
-      margin-bottom: 10px;
+    /* 一番上の「大吉」文字 */
+    #fortune {
+      color: #ef5411;   /* 橙色 */
+      font-size: 8rem;  /* 大きめ */
+      margin-top: 40px;
       line-height: 1;
     }
 
-    /* メッセージ部分（真ん中） */
-    .omikuji-message {
-      flex: 1;
-      font-size: 2.4rem;
-      color: #153f74; /* 紺色 */
+    /* メッセージ部分（中央） */
+    #message {
+      flex: 1;                /* 上下に広がる */
+      font-size: 2.4rem;      /* 少し大きめ */
+      color: #153f74;         /* 紺色 */
       line-height: 1.3;
       width: 80%;
-      margin: 0 auto;
-      overflow-y: auto; /* 文字が多くてもスクロールで枠内に収める */
+      margin: 20px auto;
+      overflow-y: auto;       /* はみ出す場合はスクロール */
       text-align: center;
     }
 
-    /* 下部の「開運」など */
+    /* 一番下の「開運」文字 */
     .omikuji-footer {
       color: #153f74;
-      font-size: 3rem;
-      margin-bottom: 20px;
+      font-size: 4rem;
+      margin-bottom: 40px;
     }
 
     /* ボタン類 */
@@ -106,7 +92,7 @@
       background: #8c3e15;
     }
 
-    /* 最初に表示するおみくじ箱画像 */
+    /* 最初の画面で表示するおみくじ箱 */
     #omikujiImage {
       cursor: pointer;
       width: 300px;
@@ -116,7 +102,7 @@
       transform: scale(1.05);
     }
 
-    /* クリック時に左右にシェイク */
+    /* クリック時に左右に揺れるアニメ */
     .shakeLR {
       animation: shakeLR 0.4s ease-in-out;
     }
@@ -128,7 +114,7 @@
       100% { transform: translateX(0); }
     }
 
-    /* おみくじ振ってる画面(上下に揺れる) */
+    /* 振っている画面 (上下に揺れる) */
     #omikujiShakeImage {
       width: 300px;
       animation: shakeUD 2s ease-in-out;
@@ -144,15 +130,16 @@
 </head>
 <body>
 
-  <h1>大吉おみくじ（1920×1080）</h1>
+  <h1>大吉おみくじ（1920×1080・青い枠）</h1>
 
   <!-- 最初の画面 -->
   <div id="initial-section">
     <p>この箱を押すと、おみくじが振られて結果が出ます</p>
+    <!-- ユーザーの omikuji.png を同じフォルダに置いてください -->
     <img id="omikujiImage" src="omikuji.png" alt="おみくじ箱">
   </div>
 
-  <!-- 振っている最中の画面 -->
+  <!-- 振ってる最中の画面 -->
   <div id="omikuji-section">
     <img id="omikujiShakeImage" src="omikuji.png" alt="振っているおみくじ箱">
     <p>おみくじを振っています…</p>
@@ -161,11 +148,9 @@
   <!-- 結果画面 -->
   <div id="result-section">
     <div id="capture-area">
-      <div class="omikuji-wrapper">
-        <div class="omikuji-title" id="fortune">大吉</div>
-        <div class="omikuji-message" id="message"></div>
-        <div class="omikuji-footer">開運</div>
-      </div>
+      <div id="fortune">大吉</div>
+      <div id="message"></div>
+      <div class="omikuji-footer">開運</div>
     </div>
 
     <button id="saveImageButton">画像として保存</button>
@@ -173,7 +158,7 @@
     <button id="retryButton">もう一度引く</button>
   </div>
 
-  <!-- html2canvas ライブラリ -->
+  <!-- html2canvas (画像保存ライブラリ) -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script>
     // 大吉メッセージ30種
@@ -210,6 +195,7 @@
       "すれ違った鳩が突然妖精に変身し、あなたにしか見えない魔法世界への鍵をそっと手渡してくれるかも！"
     ];
 
+    // 必要な要素を取得
     const initialSection = document.getElementById('initial-section');
     const omikujiSection = document.getElementById('omikuji-section');
     const resultSection = document.getElementById('result-section');
@@ -217,27 +203,24 @@
     const fortuneEl = document.getElementById('fortune');
     const messageEl = document.getElementById('message');
 
-    // 画像をクリック → 軽く左右に揺らし → 振っている画面表示
+    // 「おみくじ箱」画像クリック → 軽く左右にシェイク → 振る画面へ
     omikujiImage.addEventListener('click', () => {
-      // 左右シェイクアニメ追加
       omikujiImage.classList.add('shakeLR');
 
       setTimeout(() => {
         initialSection.style.display = 'none';
         omikujiSection.style.display = 'block';
-        // シェイククラス除去
         omikujiImage.classList.remove('shakeLR');
       }, 1000);
 
-      // 合計3秒後に結果表示
+      // さらに2秒後（合計3秒後）に結果表示
       setTimeout(() => {
         omikujiSection.style.display = 'none';
         resultSection.style.display = 'block';
 
         // 大吉固定
         fortuneEl.textContent = '大吉';
-
-        // ランダムメッセージ
+        // ランダムでメッセージ
         const idx = Math.floor(Math.random() * daikichiMessages.length);
         messageEl.textContent = daikichiMessages[idx];
       }, 3000);
@@ -249,7 +232,7 @@
       initialSection.style.display = 'block';
     });
 
-    // 画像として保存 (1920×1080)
+    // 画像として保存
     document.getElementById('saveImageButton').addEventListener('click', () => {
       const captureArea = document.getElementById('capture-area');
       html2canvas(captureArea).then(canvas => {
@@ -261,7 +244,7 @@
       });
     });
 
-    // ツイートする (画像添付は難しいのでテキストのみ)
+    // ツイートする (画像添付はできず、テキストのみ)
     document.getElementById('tweetButton').addEventListener('click', () => {
       const text = `【大吉】\n${messageEl.textContent}\n`;
       const tweetUrl = "https://twitter.com/intent/tweet?text=" + encodeURIComponent(text);
